<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="silverlion.com.house.forget.ForgetActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#262626"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:textSize="25dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#F6F6F6"></View>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E4E4E4"></View>
    <RelativeLayout
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_keyboard_arrow_right_24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"/>
        <TextView
            android:id="@+id/area_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:layout_centerVertical="true"
            android:textSize="18dp"
            android:layout_toLeftOf="@id/image"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E4E4E4"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/number_style"
            android:hint="@string/yourphone"
            android:layout_marginLeft="10dp"
            android:textColor="#9A9A9A"/>
        <TextView
            android:id="@+id/notphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="#ff0000"
            android:visibility="invisible"
            android:textSize="16dp"
            android:text="@string/notphone"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E4E4E4"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/verification"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/number_style"
            android:hint="@string/verification"
            android:layout_marginLeft="10dp"
            android:textColor="#9A9A9A"/>
        <TextView
            android:id="@+id/no_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verificationNO"
            android:textColor="#FF0000"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/verification_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="#45a8fc"
            android:text="@string/getverification"
            android:background="@drawable/text_style"
            android:padding="10dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E4E4E4"></View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp">
        <Button
            android:id="@+id/forget"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:text="@string/action"
            android:background="@drawable/register_style"/>
        <TextView
            android:id="@+id/forget_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ForgetEmail"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="#45a8fc"
            android:textSize="16dp"
            android:layout_marginBottom="20dp"/>
    </RelativeLayout>




</LinearLayout>
