<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="silverlion.com.house.forgetemail.ForgetEmailActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#262626"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/cancel"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/forget"
            android:textSize="25dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#F6F6F6"></View>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E4E4E4"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/number_style"
            android:hint="@string/youremail"
            android:layout_marginLeft="10dp"
            android:textColor="#9A9A9A"/>
        <TextView
            android:id="@+id/notphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="#ff0000"
            android:visibility="invisible"
            android:textSize="16dp"
            android:text="@string/notphone"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E4E4E4"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/verification"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/number_style"
            android:hint="@string/verification"
            android:layout_marginLeft="10dp"
            android:textColor="#9A9A9A"/>
        <TextView
            android:id="@+id/no_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verificationNO"
            android:textColor="#FF0000"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/verification_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="#45a8fc"
            android:text="@string/getverification"
            android:background="@drawable/text_style"
            android:padding="10dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E4E4E4"></View>
    <Button
        android:id="@+id/action"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/action"
        android:textStyle="bold"
        android:background="@drawable/register_style"/>
</LinearLayout>
