<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="silverlion.com.house.personal.PersonalActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#262626">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal"
            android:textSize="25sp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#F6F6F6"></View>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4"></View>
    <RelativeLayout
        android:id="@+id/hand"
        android:layout_width="match_parent"
        android:layout_height="90dp">
        <ImageView
            android:id="@+id/user_hand"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/user_head"
            android:scaleType="fitXY"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/detail_btn"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#F6F6F6"></View>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"/>
        <EditText
            android:id="@+id/name"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_input"
            android:textColor="#9A9A9A"
            android:layout_weight="1"
            android:singleLine="true"
            android:background="@drawable/number_style"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:background="#E4E4E4"></View>
    <LinearLayout
        android:id="@+id/sex_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sex"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:id="@+id/sex"
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="男"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:background="#E4E4E4"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/address"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"/>
        <EditText
            android:id="@+id/address"
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/address_input"
            android:textColor="#9A9A9A"
            android:singleLine="true"
            android:background="@drawable/number_style"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4"></View>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#F6F6F6"></View>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/area"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:id="@+id/area"
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="中国   +86"
            android:background="@drawable/number_style"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:background="#E4E4E4"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/callphone"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"/>
        <EditText
            android:id="@+id/phone"
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phone_input"
            android:textColor="#9A9A9A"
            android:singleLine="true"
            android:background="@drawable/number_style"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4"></View>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#F6F6F6"></View>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/Email"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"/>
        <EditText
            android:id="@+id/email"
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email_input"
            android:singleLine="true"
            android:textColor="#9A9A9A"
            android:background="@drawable/number_style"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4"></View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/keep"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:text="@string/kepp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:background="@drawable/register_style"/>
    </RelativeLayout>


</LinearLayout>
