<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="silverlion.com.house.emailregister.EmailActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#262626">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/back"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textSize="22dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/back_btn"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="25dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#F6F6F6"></View>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E4E4E4"></View>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email_input"
        android:layout_marginLeft="10dp"
        android:background="@drawable/number_style"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E4E4E4"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:background="@drawable/number_style"/>
        <CheckBox
            android:id="@+id/showpassword"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/showhidepassword"
            android:button="@null"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E4E4E4"></View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp">
        <Button
            android:id="@+id/register"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:text="@string/register"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:background="@drawable/register_style"/>
        <TextView
            android:id="@+id/note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:layout_below="@+id/register"
            android:layout_alignLeft="@id/register"
            android:textSize="14dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/contract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contract"
            android:textSize="14dp"
            android:layout_toRightOf="@+id/note"
            android:textColor="#45a8fc"
            android:layout_alignBottom="@+id/note"/>

    </RelativeLayout>

</LinearLayout>
