<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="silverlion.com.house.verify.VerfiyActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#262626">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/back"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textSize="22dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/back_btn"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/put_verfiy"
            android:textSize="25dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#F6F6F6"></View>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E4E4E4"></View>
    <TextView
        android:id="@+id/title"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#9A9A9A"
        android:text="验证码以发送至，请填写验证码"
        android:textSize="17sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/verfiy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/number_style"
            android:hint="@string/verification"
            android:layout_marginLeft="10dp"
            android:textColor="#9A9A9A"/>
        <TextView
            android:id="@+id/notverfiy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="#ff0000"
            android:visibility="invisible"
            android:textSize="16dp"
            android:text="@string/verificationNO"/>
    </LinearLayout>
    <Button
        android:id="@id/register"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:text="@string/commit"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:background="@drawable/register_style"/>
    <TextView
        android:id="@+id/service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="重新获取验证码（60s）"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:textSize="16sp"/>

</LinearLayout>
