<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context="silverlion.com.house.login.LoginActivity">
    
    <include
        layout="@layout/cotext_account"
        android:id="@+id/context_account"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true" />

    <include
        layout="@layout/context_password"
        android:id="@+id/context_passwork"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/context_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp" />

    <!--<Button-->
        <!--android:id="@+id/login_btn"-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:text="@string/login"-->
        <!--android:textSize="16dp"-->
        <!--android:layout_below="@id/context_passwork"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="21.5dp"-->
        <!--android:textColor="#ffffff"-->
        <!--android:background="@drawable/btn_loginstyle"/>-->
    <silverlion.com.house.components.ActionProcessButton
        android:id="@+id/login_btn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textSize="16dp"
        android:layout_below="@id/context_passwork"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21.5dp"
        android:textColor="#ffffff"
        android:background="@drawable/btn_loginstyle"/>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetthepassword"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:layout_below="@id/login_btn"
        android:layout_marginTop="19dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="15dp"
        android:textColor="#ffffff"
        android:layout_below="@id/login_btn"
        android:layout_marginTop="19dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"/>

</RelativeLayout>
